added ui design and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/shubhanshuCircle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My personal react portfolio ~ Pedro Muniz"
+      content="My personal portfolio ~ Shubhanshu Sahu"
     />
     <meta name="google-site-verification" content="YuEFQ9Cj0x_t_SJDbMkyDsm8tUlIvo9EDKR3FDWL13s" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
